syntax = "proto3";

package user;

import "commons.proto";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
  bool isVerified = 5;
  string birthday = 6;
  string avatar = 7;
  string phone = 8;
  string biography = 9;
  string createdAt = 10;
  string updatedAt = 11;
}

message UserRole {
  string userId = 1;
  int32 roleId = 2;
  string roleName = 3;
}

message UserEdge {
  User node = 1;
  string cursor = 2;
}

message CreateUser {
  string name = 1;
  string email = 2;
  string password = 3;
  string user_id = 4;
  int32 role_id = 5;
  string role_name = 6;
}

message UpdateUser {
  string id = 1;
  User data = 2;
}

message FindUsersPayload {
  repeated UserEdge edges = 1;
  commons.PageInfo pageInfo = 2;
}

message AssignRolePayload {
  string userId = 1;
  int32 roleId = 2;
}

message UsersList {
  repeated User users = 1;
}

message PaginateOptions {
  int32 page = 1;
  int32 pageSize = 2;
}

service UsersService {
  rpc find (commons.Query) returns (FindUsersPayload) {}
  rpc findById (commons.Id) returns (User) {}
  rpc findOne (commons.Query) returns (User) {}
  rpc count (commons.Query) returns (commons.Count) {}
  rpc create (CreateUser) returns (User) {}
  rpc update (UpdateUser) returns (User) {}
  rpc destroy (commons.Query) returns (commons.Count) {}
  rpc getRole (commons.Id) returns (UserRole) {}
  rpc assignRole (AssignRolePayload) returns (UserRole) {}
  rpc showAll (PaginateOptions) returns (UsersList) {}
}